  planes was lying in one of the planes. (Ignacio Vera)

* LUCENE-10495: Fix return statement of siblingsLoaded() in TaxonomyFacets. (Yuting Gan)

* LUCENE-10533: SpellChecker.formGrams is missing bounds check (Kevin Risden)

* LUCENE-10529: Properly handle when TestTaxonomyFacetAssociations test case randomly indexes
  no documents instead of throwing an NPE. (Greg Miller)

Build
---------------------

* Upgrade forbiddenapis to version 3.3.  (Uwe Schindler)

Other
---------------------
* LUCENE-10526: Test-framework: Add FilterFileSystemProvider.wrapPath(Path) method for mock filesystems
  to override if they need to extend the Path implementation. (Gautam Worah, Robert Muir)

======================= Lucene 9.1.0 =======================

API Changes
---------------------

* LUCENE-10244: MultiCollector::getCollectors is now public, allowing users to access the wrapped
  collectors. (Andriy Redko)

* LUCENE-10197: UnifiedHighlighter now has a Builder to construct it.  The UH's setters are now
  deprecated.  (Animesh Pandey, David Smiley)

* LUCENE-10301: the test framework is now a module. All the classes have been moved from
  org.apache.lucene.* to org.apache.lucene.tests.* to avoid package name conflicts with the
  core module. (Dawid Weiss)

* LUCENE-10183: KnnVectorsWriter#writeField to take KnnVectorsReader instead of VectorValues.
  (Zach Chen, Michael Sokolov, Julie Tibshirani, Adrien Grand)

* LUCENE-10335: Deprecate helper methods for resource loading in IOUtils and StopwordAnalyzerBase
  that are not compatible with module system (Class#getResourceAsStream() and Class#getResource()
  are caller sensitive in Java 11). Instead add utility method IOUtils#requireResourceNonNull(T)
  to test existence of resource based on null return value.  (Uwe Schindler, Dawid Weiss)

* LUCENE-10349: WordListLoader methods now return unmodifiable CharArraySets.  (Uwe Schindler)

* LUCENE-10377: SortField.getComparator() has changed signature. The second parameter is now